plotted extra runs per teams on year 2016

--- a/ipl/templates/ipl/first.html
+++ b/ipl/templates/ipl/first.html
@@ -5,6 +5,7 @@
     <button onclick=matchesPlayed() class="btn btn-primary">Mathces per
         Season</button>
     <button onclick=matchesWon() class="btn btn-primary">Mathces</button>
+    <button onclick=extraRuns() class="btn btn-primary">Extra-runs</button>
     <div id="container" style="width:100%; height:400px;"></div>
     {% endblock content %}
 </div>
