Plotted economical bowlers for season 2015

--- a/ipl/templates/ipl/first.html
+++ b/ipl/templates/ipl/first.html
@@ -6,6 +6,7 @@
         Season</button>
     <button onclick=matchesWon() class="btn btn-primary">Mathces</button>
     <button onclick=extraRuns() class="btn btn-primary">Extra-runs</button>
+    <button onclick=economy() class="btn btn-primary">Economical Bowler</button>
     <div id="container" style="width:100%; height:400px;"></div>
     {% endblock content %}
 </div>
