--- a/ipl/templates/ipl/delivery.html
+++ b/ipl/templates/ipl/delivery.html
@@ -11,10 +11,8 @@
                 {% csrf_token %}
                 {{form |crispy }}
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success"
-                        onclick="">Delete</button>
                     <button type="submit"
-                        class="btn btn-success">Update</button>
+                        class="btn btn-success">Create</button>
                 </div>
             </form>
         </div>
