--- a/ipl/templates/ipl/first.html
+++ b/ipl/templates/ipl/first.html
@@ -2,11 +2,15 @@
 {% block content %}
 <div class="container">
     <h2>IPL Fun!!</h2>
-    <button onclick=matchesPlayed() class="btn btn-primary">Mathces per
+    <button onclick=matchesPlayed() class="btn btn-outline-primary">Mathces per
         Season</button>
-    <button onclick=matchesWon() class="btn btn-primary">Mathces</button>
-    <button onclick=extraRuns() class="btn btn-primary">Extra-runs</button>
-    <button onclick=economy() class="btn btn-primary">Economical Bowler</button>
-    <div id="container" style="width:100%; height:400px;"></div>
+    <button onclick=matchesWon()
+        class="btn btn-outline-primary">Mathces</button>
+    <button onclick=extraRuns()
+        class="btn btn-outline-primary">Extra-runs</button>
+    <button onclick=economy() class="btn btn-outline-primary">Economical
+        Bowler</button>
+    <button onclick=sixes() class="btn btn-outline-primary">Sixes@2016</button>
+    <div id="container" style="width:100%; height:600px;"></div>
     {% endblock content %}
 </div>
